make sure that there is a max height incase the content of the sheet is greater. note, this does not dynamically update the sheet height while the sheet is open

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsdx lint"
+      "pre-commit": "tsdx lint --fix"
     }
   },
   "prettier": {
