--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@types/resize-observer-browser": "^0.1.7",
     "csstype": "3.1.1",
     "framer-motion": "10.12.16",
     "history": "5.0.0",
