--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "version": "2.1.0",
   "license": "MIT",
-  "name": "@eimerreis/react-modal-sheet",
+  "name": "react-modal-sheet",
   "description": "Flexible bottom sheet component for your React apps",
   "author": "Teemu Taskula",
-  "repository": "https://github.com/eimerreis/react-modal-sheet",
-  "homepage": "https://eimerreis.github.io/react-modal-sheet",
+  "repository": "https://github.com/Temzasse/react-modal-sheet",
+  "homepage": "https://temzasse.github.io/react-modal-sheet",
   "keywords": [
     "react",
     "modal",
