--- a/example/package.json
+++ b/example/package.json
@@ -4,8 +4,9 @@
   "license": "MIT",
   "homepage": "https://temzasse.github.io/react-modal-sheet",
   "scripts": {
-    "dev": "parcel index.html",
-    "build": "rm -rf dist && parcel build index.html --public-url /react-modal-sheet/",
+    "dev": "vite",
+    "build": "rm -rf dist && vite build --base /react-modal-sheet/",
+    "preview": "vite preview --base /react-modal-sheet/",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "typecheck": "tsc --noEmit --skipLibCheck",
@@ -28,11 +29,12 @@
   "devDependencies": {
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vitejs/plugin-react": "4.3.3",
     "gh-pages": "3.1.0",
-    "parcel": "2.12.0",
     "prettier": "3.2.5",
     "process": "0.11.10",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vite": "5.4.10"
   },
   "prettier": {
     "printWidth": 80,
