--- a/package.json
+++ b/package.json
@@ -23,69 +23,47 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist",
-    "src"
-  ],
+  "files": ["dist", "src"],
   "scripts": {
     "dev": "tsup --watch --onSuccess \"yalc publish --push\"",
+    "prebuild": "run-p format:check lint:check typecheck",
     "build": "tsup",
-    "build:verify": "attw --pack .",
-    "format:check": "prettier . --check",
-    "format:write": "prettier . --write",
-    "lint": "eslint src/* --fix --max-warnings=0",
+    "postbuild": "attw --pack .",
+    "format:check": "biome format ./src",
+    "format:write": "biome format --write ./src",
+    "lint:check": "biome lint --error-on-warnings ./src",
+    "lint:write": "biome lint --error-on-warnings  --write ./src",
     "link": "yalc publish && npm run link:example && npm run link:example-ssr",
     "link:example": "cd example && yalc add react-modal-sheet && npm i",
     "link:example-ssr": "cd example-ssr && yalc add react-modal-sheet && npm i",
     "test": "vitest run",
-    "typecheck": "tsc --noEmit --skipLibCheck",
-    "release": "npm run build && npm run build:verify && np"
+    "typecheck": "tsc --noEmit",
+    "release": "npm run build && np"
   },
   "peerDependencies": {
     "framer-motion": ">=10",
     "react": ">=16"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "0.15.3",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@typescript-eslint/eslint-plugin": "6.6.0",
-    "@vitejs/plugin-react": "4.1.0",
-    "csstype": "3.1.1",
-    "eslint": "8.51.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-standard-with-typescript": "39.1.1",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-n": "16.0.2",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "@arethetypeswrong/cli": "0.17.2",
+    "@biomejs/biome": "1.9.4",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "4.3.4",
+    "csstype": "3.1.3",
     "framer-motion": "11.11.10",
-    "history": "5.0.0",
-    "husky": "4.2.5",
-    "jsdom": "22.1.0",
-    "parcel": "2.12.0",
-    "prettier": "3.0.3",
-    "react": "18.2.0",
-    "react-aria": "3.25.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.2.0",
-    "react-router": "6.0.0-beta.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "react-stately": "3.23.0",
-    "styled-components": "6.0.8",
-    "tsup": "8.0.2",
-    "typescript": "5.6.3",
-    "vite": "4.4.11",
-    "vitest": "0.34.6"
+    "husky": "9.1.7",
+    "jsdom": "25.0.1",
+    "npm-run-all": "4.1.5",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "tsup": "8.3.5",
+    "typescript": "5.7.2",
+    "vite": "6.0.6",
+    "vitest": "2.1.8"
   },
   "engines": {
-    "node": ">=18"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "echo \"Todo fix husky...\""
-    }
+    "node": ">=22"
   },
   "prettier": {
     "printWidth": 80,
