--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "files": ["dist", "src"],
   "scripts": {
     "dev": "tsup --watch --onSuccess \"yalc publish --push\"",
-    "prebuild": "run-p format:check lint:check typecheck",
+    "prebuild": "npm run verify",
     "build": "tsup",
     "postbuild": "attw --pack .",
     "format:check": "biome format ./src",
@@ -38,7 +38,9 @@
     "link:example-ssr": "cd example-ssr && yalc add react-modal-sheet && npm i",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "release": "npm run build && np"
+    "release": "npm run build && np",
+    "verify": "run-p format:check lint:check typecheck",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "framer-motion": ">=10",
@@ -51,7 +53,7 @@
     "@types/react-dom": "19.0.2",
     "@vitejs/plugin-react": "4.3.4",
     "csstype": "3.1.3",
-    "framer-motion": "11.11.10",
+    "framer-motion": "11.15.0",
     "husky": "9.1.7",
     "jsdom": "25.0.1",
     "npm-run-all": "4.1.5",
