--- a/package.json
+++ b/package.json
@@ -9,26 +9,34 @@
   "keywords": [
     "react",
     "modal",
+    "motion",
     "bottom-sheet",
     "accessibility",
     "framer-motion"
   ],
   "exports": {
     ".": {
-      "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
-      "types": "./dist/index.d.ts"
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
     }
   },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": ["dist", "src"],
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "dev": "tsup --watch --onSuccess \"yalc publish --push\"",
-    "prebuild": "npm run verify",
     "build": "tsup",
-    "postbuild": "attw --pack .",
+    "build:verify": "attw --pack .",
     "format:check": "biome format ./src",
     "format:write": "biome format --write ./src",
     "lint:check": "biome lint --error-on-warnings ./src",
@@ -38,12 +46,12 @@
     "link:example-ssr": "cd example-ssr && yalc add react-modal-sheet && npm i",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "release": "npm run build && np",
     "verify": "run-p format:check lint:check typecheck",
+    "release": "npm run verify && npm run build && npm run build:verify && np",
     "prepare": "husky"
   },
   "peerDependencies": {
-    "framer-motion": ">=10",
+    "motion": ">=11",
     "react": ">=16"
   },
   "devDependencies": {
@@ -53,9 +61,9 @@
     "@types/react-dom": "19.0.2",
     "@vitejs/plugin-react": "4.3.4",
     "csstype": "3.1.3",
-    "framer-motion": "11.15.0",
     "husky": "9.1.7",
     "jsdom": "25.0.1",
+    "motion": "11.15.0",
     "npm-run-all": "4.1.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
