--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,8 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": []
+    "ignore": [],
+    "include": ["src", "test"]
   },
   "formatter": {
     "enabled": true,
