--- a/example/package.json
+++ b/example/package.json
@@ -10,36 +10,28 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "typecheck": "tsc --noEmit --skipLibCheck",
-    "format:check": "prettier --check .",
-    "format:write": "prettier --write ."
+    "format:check": "biome format ./src",
+    "format:write": "biome format --write ./src",
+    "lint:check": "biome lint --error-on-warnings ./src",
+    "lint:write": "biome lint --error-on-warnings  --write ./src"
   },
   "dependencies": {
-    "framer-motion": "11.11.10",
-    "history": "5.0.0",
-    "react": "18.2.0",
-    "react-aria": "3.25.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.2.0",
+    "motion": "11.15.0",
+    "react": "19.0.0",
+    "react-aria": "3.36.0",
+    "react-dom": "19.0.0",
+    "react-icons": "5.4.0",
     "react-modal-sheet": "file:.yalc/react-modal-sheet",
-    "react-router": "6.0.0-beta.0",
-    "react-router-dom": "6.0.0-beta.0",
-    "react-stately": "3.23.0",
-    "styled-components": "6.0.8"
+    "react-router": "7.1.1",
+    "react-stately": "3.34.0",
+    "styled-components": "6.1.13"
   },
   "devDependencies": {
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "@vitejs/plugin-react": "4.3.3",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
+    "@vitejs/plugin-react": "4.3.4",
     "gh-pages": "3.1.0",
-    "prettier": "3.2.5",
-    "process": "0.11.10",
-    "typescript": "5.6.3",
-    "vite": "5.4.10"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "typescript": "5.7.2",
+    "vite": "6.0.6"
   }
 }
