Improve dev setup

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "src"
   ],
   "scripts": {
-    "dev": "tsup --watch --onSuccess \"yalc publish --push\"",
+    "dev": "tsup --watch --onSuccess \"yalc push --replace\"",
     "build": "tsup",
     "build:verify": "attw --pack .",
     "format:check": "biome format ./src",
