--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "homepage": "https://temzasse.github.io/react-modal-sheet",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --force",
     "build": "rm -rf dist && vite build --base /react-modal-sheet/",
     "preview": "vite preview --base /react-modal-sheet/",
     "predeploy": "npm run build",
@@ -16,22 +16,23 @@
     "lint:write": "biome lint --error-on-warnings  --write ./src"
   },
   "dependencies": {
-    "motion": "11.15.0",
-    "react": "19.0.0",
-    "react-aria": "3.36.0",
-    "react-dom": "19.0.0",
-    "react-icons": "5.4.0",
+    "motion": "12.9.2",
+    "react": "19.1.0",
+    "react-aria": "3.39.0",
+    "react-dom": "19.1.0",
+    "react-icons": "5.5.0",
     "react-modal-sheet": "file:.yalc/react-modal-sheet",
     "react-router": "7.1.1",
-    "react-stately": "3.34.0",
-    "styled-components": "6.1.13"
+    "react-stately": "3.37.0",
+    "styled-components": "6.1.17"
   },
   "devDependencies": {
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
-    "@vitejs/plugin-react": "4.3.4",
-    "gh-pages": "3.1.0",
-    "typescript": "5.7.2",
-    "vite": "6.0.6"
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
+    "@vitejs/plugin-react": "4.4.1",
+    "gh-pages": "6.3.0",
+    "typescript": "5.8.3",
+    "vite": "6.3.3",
+    "vite-plugin-restart": "0.4.2"
   }
 }
