--- a/package.json
+++ b/package.json
@@ -81,5 +81,8 @@
     "semi": true,
     "singleQuote": true,
     "trailingComma": "es5"
+  },
+  "dependencies": {
+    "react-use-measure": "2.1.7"
   }
 }
