Expose scroll util hooks and add custom scroller example

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,12 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["**/src/**", "**/test/**"]
+    "includes": [
+      "**/src/**",
+      "**/test/**",
+      "**/example/src/**",
+      "**/example-ssr/src/**"
+    ]
   },
   "formatter": {
     "enabled": true,
