--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "editor.defaultFormatter": "biomejs.biome",
+  "editor.codeActionsOnSave": {
+    "quickfix.biome": "explicit",
+    "source.organizeImports.biome": "explicit"
+  },
   "[html]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
@@ -23,7 +28,6 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "editor.defaultFormatter": "biomejs.biome",
   "[markdown]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
